--- a/recall/src/app/registeralumni/registeralumni.component.css
+++ b/recall/src/app/registeralumni/registeralumni.component.css
@@ -382,3 +382,10 @@ select {
   font-size: 30px;
  
 }
+.errorMsg{
+  text-align: center;
+    margin: 0;
+    margin-top: 20px;
+    font-size: 15px;
+    color: red;
+}
