--- a/recall/src/app/alumnidirectory/alumnidirectory.component.css
+++ b/recall/src/app/alumnidirectory/alumnidirectory.component.css
@@ -238,3 +238,17 @@ button:focus{
     font-size: 30px;
     margin-top: 60px;
 }
+
+
+.preloader {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: auto;
+    display: flex !important;
+    align-items: center;
+    justify-content: center;
+ }
+ 
