--- a/recall/src/app/birthdays/birthdays.component.css
+++ b/recall/src/app/birthdays/birthdays.component.css
@@ -85,9 +85,11 @@ button:focus{
     margin-top: 20px;
 }
 .monthbday{
-    width: 12%;
+    width: 7%;
+    height: 10px;
     display: inline-grid;
     padding: 0px;
+    box-shadow: none;
 }
 .back{
     position: absolute;
