--- a/recall/src/app/homepage/homepage.component.html
+++ b/recall/src/app/homepage/homepage.component.html
@@ -11,16 +11,20 @@
     <i class="fa fa-map-marker" style="    font-size:17px;" aria-hidden="true"></i>
     <span class="location">Hyderabad</span>
     <div class="bdaynotify">
-        <i class="faa fa fa-birthday-cake" aria-hidden="true" style="font-size: 30px;" [routerLink]="['/Birthdays']"></i><span class="circle" *ngIf=" bdaycount>0">{{bdaycount}}</span>
-        <i class="faa fa fa-bell" aria-hidden="true"  style="font-size: 30px;" [routerLink]="['/Notifications']"></i><span class="circle">5</span>
+      <div class="qricon"> <img src='../../assets/images/qr-icon2.png' height="50px"></div>
+      <div class="cake" [routerLink]="['/Birthdays']"> <img src='../../assets/images/bicon.png' height="30px"><div class="notify cakenotify" *ngIf=" bdaycount>0">3</div></div>
+    <div class="bell notifbell" [routerLink]="['/Notifications']"> <div class="notify">3</div></div>
+   
+        <!-- <i class="faa fa fa-birthday-cake" aria-hidden="true" style="font-size: 30px;" [routerLink]="['/Birthdays']"></i><span class="circle" *ngIf=" bdaycount>0">{{bdaycount}}</span>
+        <i class="faa fa fa-bell" aria-hidden="true"  style="font-size: 30px;" [routerLink]="['/Notifications']"></i><span class="circle">5</span> -->
 
     </div>
 </div>
   </div>
   <div class="content">
       <div class="eventDiv" #eventdiv>
-    <h1 class="events">Total Registered Events //<span class="total">2</span></h1>
-    <button (click)="showMore()" class="viewbut">{{view}}</button>
+    <h1 class="events">Registered Events //<span class="total">2</span></h1>
+    <!-- <button (click)="showMore()" class="viewbut">{{view}}</button> -->
     <div class="eachevent" >
       <h5 class="eventDate" style="font-size: 15px;"> Fri, Apr 17, 10:30 AM</h5>
         <h5 class="eventName ">Design, Analyze and Optimize Turbomachinery Applications</h5>
@@ -57,8 +61,8 @@
     <button *ngIf="isEdit" class="submitbutton modify" (click)="submittestmonial()" >Submit</button>
     </div>
 </div>
-<footer class="foot">
+<!-- <footer class="foot">
   <hr style="margin: 5px;">
   <p class="text-center" style="margin-bottom: 0px;">ahmad@123.com</p>
-</footer>
+</footer> -->
 </div>
