--- a/recall/src/app/login-alumni/login-alumni.component.css
+++ b/recall/src/app/login-alumni/login-alumni.component.css
@@ -72,6 +72,7 @@
     padding: 20px;
     padding-top: 10px;
     padding-bottom: 5px;
+    font-family: sans-serif;
 }
 .input-lg{
     height: 35px;
