--- a/recall/src/app/homepage/homepage.component.html
+++ b/recall/src/app/homepage/homepage.component.html
@@ -12,6 +12,7 @@
     <span class="location">Hyderabad</span>
     <div class="bdaynotify">
       <div class="qricon"> <img src='../../assets/images/qr-icon2.png' height="50px"></div>
+      <div class="cake job" [routerLink]="['/JobStreet']"><img src='../../assets/images/job.png' height="30px"></div>
       <div class="cake" [routerLink]="['/Birthdays']"> <img src='../../assets/images/bicon.png' height="30px"><div class="notify cakenotify" *ngIf=" bdaycount>0">3</div></div>
     <div class="bell notifbell" [routerLink]="['/Notifications']"> <div class="notify">3</div></div>
    
