--- a/recall/src/app/jobstreet/jobstreet.component.html
+++ b/recall/src/app/jobstreet/jobstreet.component.html
@@ -20,7 +20,7 @@
           </div>
     </div>
     <div class="post">
-            <button class="postjob" (click)='postAjob=!postAjob'>Post a Job</button>
+            <button class="postjob" (click)='postAjob=!postAjob;posted=false'>Post a Job</button>
     </div>
     </div>
  <div *ngIf="dupjobs.length==0"  class="errordiv">
