--- a/recall/src/app/jobstreet/jobstreet.component.html
+++ b/recall/src/app/jobstreet/jobstreet.component.html
@@ -53,7 +53,7 @@
         <div class="eachjob postby" *ngFor="let eachjob of yourjobs">
             <div class="companyname cbyme">
                 <div style="width: 70%;display: inline-block;font-family: roboto;">{{eachjob.company}}</div> 
-                 <div style="width: 30%; float: right;"><button class="apply delete">Delete</button></div> </div>
+                 <div style="width: 30%; float: right;"><button class="apply delete" (click)="deleteJob(eachjob)">Delete</button></div> </div>
                  <div class="subtext subbyme">Hiring for {{eachjob.experience}}</div>
                  <div style="margin-top: -17px;">
                  <div class="tags byme">Role : <span class="values">{{eachjob.role}}</span></div>
