--- a/recall/src/app/alumni/alumni.component.html
+++ b/recall/src/app/alumni/alumni.component.html
@@ -40,10 +40,10 @@
                     <li class="menuElements" (click)="testimonial()" [routerLink]="['/Alumni/Alumni-Chapters']">Alumni Chapters</li>
                     <li class="menuElements" (click)="testimonial()" [routerLink]="['/Alumni/Alumni-Directory']">Alumni Directory</li>
                     <!-- <li class="menuElements" (click)="testimonial()" [routerLink]="['/Community']">Community</li> -->
-                    <li class="menuElements" (click)="testimonial()" [routerLink]="['/Gallery']">Gallery </li>
-                    <li class="menuElements" (click)="testimonial()" [routerLink]="['/Events']"> Events </li>
-                    <li class="menuElements" (click)="testimonial()" [routerLink]="['/alumniTestimonials']"> Testimonials</li>
-                    <li class="menuElements" (click)="testimonial();" [routerLink]="['/contact-us']"> Contact Us </li>
+                    <li class="menuElements" (click)="testimonial()" [routerLink]="['/Alumni/Gallery']">Gallery </li>
+                    <li class="menuElements" (click)="testimonial()" [routerLink]="['/Alumni/Events']"> Events </li>
+                    <li class="menuElements" (click)="testimonial()" [routerLink]="['/Alumni/alumniTestimonials']"> Testimonials</li>
+                    <li class="menuElements" (click)="testimonial();" [routerLink]="['/Alumni/contact-us']"> Contact Us </li>
                     <div class="hd hidden-md"></div>
                 </ul>
         </div>
