--- a/recall/src/app/admin/adminaboutus/adminaboutus.component.css
+++ b/recall/src/app/admin/adminaboutus/adminaboutus.component.css
@@ -37,10 +37,25 @@
 }
 .update{
     margin: 1%;
-    background: darkgray;
+    font-size: 16px;
+    border-radius: 5px;
+    background: #3f6ad8;
     border: 1px solid;
     padding: 5px 15px;
     color: white;
+}
+.delete{
+  background-color: transparent;
+  color: #3f6ad8 ;
+}
+.update:hover{
+  background-color: #2955c8;
+    border-color: #2651be;
+}
+.delete:hover{
+  text-decoration: underline;
+  background-color: transparent;
+  border-color: transparent;
 }
 .form-control{
      
