--- a/recall/src/app/admin/dashboard/dashboard.component.css
+++ b/recall/src/app/admin/dashboard/dashboard.component.css
@@ -4,22 +4,27 @@
 .info{
  display: inline-block;
  padding: 20px 15px;
+padding-top: 0px;
 }
 .infocard{
- box-shadow: 0px 0px 5px -2px rgba(0,0,0,0.75);
  display: inline-block;
     background: white;
-    padding: 11px;
     margin: 1% 15px;
     transition: 0.5s all;
+    border-radius: 10px;
+    box-shadow: 0 4px 20px 1px rgba(0, 0, 0, 0.06), 0 1px 4px rgba(0, 0, 0, 0.08);
+    border: 0;
+}
+.countusers{
+    font-size: 30px;
 }
 .icon-rounded{
     padding: 17px;
-    background: #00ad45;
     margin: 10px;
     border-radius: 50%;
     font-size: 30px;
-    color: white;
+    margin-top: 18px;
+
 }
 .count{
     float: right;
@@ -29,12 +34,14 @@
     position: relative;
     bottom: 7px;
     color: #777777;
+    font-size: 14px;
 }
 th{
     font-size: 16px;
 }
 .content{
     padding: 10px;
+    margin-top: -30px;
 }
 table{
     width: 100%;
@@ -75,3 +82,169 @@ table {
     width: 25%;
   }
   
+  .users{
+    display: inline-block;
+    width: 100%;
+  }
+  .eachone{
+    display: inline-block;
+    margin: 0.5% 1.5%;
+    width: 30%;
+    background: white;
+    padding: 10px;
+    border-radius: 3px;
+
+  }
+  .eachimage{
+    height: 80px;
+    width: 22%;
+    display: inline-grid;
+  }
+  .details{
+    display: inline-block;
+    padding: 1px 0px 0px 15px;
+    /* margin-top: -24px; */
+    width: 78%;
+}
+  .headtext{
+    font-size: 20px;
+    font-weight: bold;
+  }
+  .headtext:hover{
+      cursor: pointer;
+      color: #DC143C;
+  }
+.personimage{
+    height: 260px;
+    display: inline-grid;
+    width: 200px;
+}
+.profileblock{
+   display: inline-block;
+   width: 100%;
+}
+.userprofile{
+    padding: 17px 0 0px 20px;
+    background: white;
+    margin: 1%;
+    border-radius: 3px;
+}
+.persondetails{
+    display: inline-block;
+    padding-left: 10px;
+    margin-top: 0px;
+   width: 24%;
+}
+.profileheadtext{
+    font-size: 30px;
+    font-weight: bold;
+}
+.extradetails{
+   
+}
+.detailcards{
+    float: right;
+    padding: 10px;
+    display: inline-block;
+    width: 57%;
+}
+.eachcard{
+    padding: 10px;
+    margin: 0%;
+    display: inline-block;
+    margin-left: 6%;
+    margin-top: 1%;
+    border: 1px solid;
+    padding: 10px;
+    border-radius: 10px;
+    box-shadow: 0 4px 20px 1px rgba(0, 0, 0, 0.06), 0 1px 4px rgba(0, 0, 0, 0.08);
+    border: 0;
+}
+.maintext{
+    font-weight: bold;
+    color: #663399;
+}
+.subtexte{
+    font-size: 17px;
+    bottom: 4px;
+    margin: 0;
+}
+.showall{
+
+}
+.testmonial{
+ margin: 10px 0px;
+}
+.approved{
+    font-size: 12px;
+    border: 1px solid;
+    padding: 2px;
+    border-radius: 5px;
+    margin-left: 10px;
+ 
+}
+.testmonialtext{
+    font-size: 14px;
+    padding-left: 10px;
+}
+.eachsubcard{
+    display: inline-grid;
+    background-color: #eeeeee;
+    width: 33%;
+    padding-top: 10px;
+    height: 100%;
+}
+.eachevent{
+    padding: 10px;
+    background: white;
+    /* margin: 2px; */
+    margin-bottom: 1px;
+   
+}
+.hedding{
+    background: white;
+    padding: 10px;
+    margin: 0px 17px;
+    border-radius: 5px;
+}
+.texthead{
+    margin-bottom: 0px;
+    font-size: 24px;
+}
+.subheadtext{
+    font-size: 12px;
+}
+.back{
+    border: none;
+    background: #DC143c;
+    padding: 10px;
+    color: white;
+    margin-top: 15px;
+
+}
+.tabledata{
+    margin: 0px 17px;
+    background: white;
+    padding: 5px;
+}
+.approve{
+    border: 1px solid;
+    border-radius: 5px;
+    padding: 3px;
+    margin-left: 130px;
+}
+.searchdivuser{
+    float: right;
+    margin-top: -28px;
+
+}
+.nomsg{
+    background: white;
+    padding: 10px;
+    margin: 0px 16px;
+    font-weight: 700;
+
+}
+.cardhead{
+    margin: 5px 10px;
+}
