--- a/recall/src/app/admin/dashboard/dashboard.component.html
+++ b/recall/src/app/admin/dashboard/dashboard.component.html
@@ -1,118 +1,163 @@
 <div class="main">
+  <div *ngIf="!userprofile">
 <div class="info">
-    <div class="infocard" >
-        <i class="fa fa-users dollar2 icon-rounded" style="background-color: #ffb22b;"></i>
+    <div class="infocard" (click)='newUsers()'>
+        <i class="fa fa-users dollar2 icon-rounded" style="color: #ffb22b;"></i>
         <div class="count">
-            <h5><strong>1230</strong></h5>
+            <h5 class="countusers"><strong>0</strong></h5>
             <span class="subtext">New Users</span>
         </div>
     </div>
 
-    <div class="infocard">
-        <i class="fa fa-users dollar2 icon-rounded" style="background-color: #fc4b6c;"></i>
+    <div class="infocard"  (click)='approvedUsers()'>
+        <i class="fa fa-users dollar2 icon-rounded" style="color: #fc4b6c;"></i>
         <div class="count">
-            <h5><strong>1230</strong></h5>
+            <h5 class="countusers"><strong>{{approvedusers.length}}</strong></h5>
             <span class="subtext">Approved Users</span>
         </div>
     </div>
 
-    <div class="infocard">
-        <i class="fa fa-users dollar2 icon-rounded" style="background-color: #1e88e5;"></i>
+    <div class="infocard" (click)='unapprovedUsers()'>
+        <i class="fa fa-users dollar2 icon-rounded" style="color: #1e88e5;"></i>
         <div class="count">
-            <h5><strong>120</strong></h5>
+            <h5 class="countusers"><strong>{{unapprovedusers.length}}</strong></h5>
             <span class="subtext">UnAproved Users</span>
         </div>
     </div>
 
-    <div class="infocard">
-        <i class="fa fa-users dollar2 icon-rounded"></i>
+    <div class="infocard" (click)="totalUsers()" id='tableshow' >
+        <i class="fa fa-users dollar2 icon-rounded" style="color: #00ad45;"></i>
         <div class="count">
-            <h5><strong>30</strong></h5>
+            <h5 class="countusers"><strong>{{allAlumni.length}}</strong></h5>
             <span class="subtext">Total Users</span>
         </div>
     </div>
 
 </div>
-<div class="content">
-    <div class="searchdiv">
-    <label class="searchlabel"for="">Search:</label>
-    <input matInput (keyup)="applyFilter($event)"
-    type="text"
-    class="form-control"
-    name="searchString"
-    placeholder="Type to search..."
-    [(ngModel)]="searchString"
-  />
-</div>
-    <!-- <table>
-        <thead>
-            <th class="tablehead" style="width: 1%;">#</th>
-            <th class="tablehead">Name</th>
-            <th class="tablehead">Email</th>
-            <th class="tablehead">Batch</th>
-            <th class="tablehead">Branch</th>
-            <th class="tablehead">Institute</th>
-           
-        </thead>
-        <tbody>
-            <tr *ngFor='let each of allalumni|filter:searchString|paginate:{itemsPerPage:10,currentPage:p};index as i'>
-                <td class="tabledata">{{i+1}}</td>
-                <td class="tabledata">{{each.name}}</td>
-                <td class="tabledata">{{each.email}}</td>
-                <td class="tabledata">{{each.batch}}</td>
-                <td class="tabledata">{{each.branch}}</td>
-                <td class="tabledata">{{each.institute}}</td>
-            </tr>
-        </tbody>
-    </table>
-    <div class="pageNumber">
-    <pagination-controls (pageChange)="p=$event"></pagination-controls>
-</div> -->
-
-<div class="mat-elevation-z8">
-    <table mat-table [dataSource]="dataSource" matSort class="table table-striped ">
-  
-      <!-- ID Column -->
-      <ng-container matColumnDef="rowIndex">
-        <th mat-header-cell *matHeaderCellDef> Index </th>
-        <td mat-cell *matCellDef="let row;index as i;"> {{i}} </td>
-      </ng-container>
-  
-      <!-- Progress Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
-      </ng-container>
-  
-      <!-- Name Column -->
-      <ng-container matColumnDef="batch">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Batch </th>
-        <td mat-cell *matCellDef="let row"> {{row.batch}} </td>
-      </ng-container>
-  
-      <!-- Color Column -->
-      <ng-container matColumnDef="email">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Email </th>
-        <td mat-cell *matCellDef="let row"> {{row.email}} </td>
-      </ng-container>
-  
-      <ng-container matColumnDef="branch">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Branch </th>
-        <td mat-cell *matCellDef="let row"> {{row.branch}} </td>
-      </ng-container>
-
-      <ng-container matColumnDef="institute">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header> Institute </th>
-        <td mat-cell *matCellDef="let row"> {{row.institute}} </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;">
-      </tr>
-    </table>
-  
-    <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+<div class="content" >
+  <div *ngIf='!showTable' >
+<div class="hedding">
+  <h2 class="texthead">{{userstype}} <span class="subheadtext">({{subtext}})</span></h2>
+  <div class="searchdivuser">
+    <label for="">Search Alumni : </label>
+    <input class='form-input'type="text" [(ngModel)]='searchkey'>
   </div>
+</div>
+  <div class="users" >
+    <div *ngIf='showusers.length==0' class="nomsg">
+      <h5 class="text-center"> <b>No {{userstype}}</b> </h5>
+  </div>
+  <div class="eachone" *ngFor='let eachalumni of showusers | filter:searchkey'>
+    <div class="eachimage">
+      <img src={{eachalumni.profilepic}} alt="" height="100%" width="100%" style="border-radius: 50%;">
+    </div>
+    <div class="details">
+      <h3 class="small headtext" (click)='userprofile=true;showUser(eachalumni)'>{{eachalumni.Name}}</h3>
+      <h3 class="small">{{eachalumni.institution}}</h3>
+      <h3 class="small">{{eachalumni.branch}}({{eachalumni.yop}})</h3>
+    </div>
+  </div>
+  </div>
+</div>
+
+<div *ngIf="showTable" id='tablediv'>
+  <div class="hedding">
+    <h2 class="texthead">{{userstype}} <span class="subheadtext">({{subtext}})</span></h2>
+  </div >
+  <div class="tabledata">
+  <table id='events' class="table table-striped table-bordered table-sm row-border hover" >
+    <thead>
+      <tr>
+        <th class="tablehead"  style="width: 100px;">#</th>
+        <th class="tablehead" id='name' >Name</th>
+        <th class="tablehead" >Email</th>
+        <th class="tablehead" >Approval</th>
+        <th class="tablehead" >Institute</th>
+        <th class="tablehead" >Batch</th>
+        <th class="tablehead"  style="width: 0px;">Branch</th>            
+      </tr>
+    </thead>
+  </table>
+  </div>
+
+</div>
+
   
 </div>
+</div>
+<div class="userprofile" *ngIf="userprofile">
+  <div class="profileblock">
+    <div class="personimage">
+      <img src={{userprofiledata.profilepic}} alt="" height="100%" width="100%" >
+    </div>
+    <div class="persondetails">
+      <h3 class="small profileheadtext " (click)='userprofile=true'>{{userprofiledata.Name}}</h3>
+      <h3 class="small">{{userprofiledata.branch}}(2020)</h3>
+      <h3 class="small">Hyderabad Chapter</h3>
+      <h3 *ngIf='!userprofiledata.approved' class="small" type='button' (click)='approval()'><span class="approve">UnApproved User</span></h3>
+      <h3 *ngIf='userprofiledata.approved' class="small"><span class="approve">Approved User</span></h3>
+      <div class="extradetails">
+        <hr class="hrline">
+        <h3 class="small"><b>Email:</b> {{userprofiledata.email}}</h3>
+        <hr class="hrline">
+        <h3 class="small"><b>Institute: </b> {{userprofiledata.institution}}</h3>
+        <hr class="hrline">
+        <h3 class="small"><b>Job: </b>{{userprofiledata.designation}}, {{userprofiledata.company}}</h3>
+        <h3 class="small"><b>Location: </b> {{userprofiledata.location}}</h3>
+      </div>
+    </div>
+    <div class="detailcards">
+            <div class="eachcard">
+              <h4 class="maintext text-center cardhead">{{userprofiledata.registeredon| date:'dd/MM/yyyy'}}</h4>
+              <h2 class="subtexte text-center">Registered date</h2>
+            </div>
+            <div class="eachcard" *ngIf='userprofiledata.approved'>
+              <h4 class="maintext text-center cardhead">10/20/1010</h4>
+              <h2 class="subtexte text-center">Aproved On</h2>
+            </div>
+            <div class="eachcard">
+              <h4 class="maintext text-center cardhead">2</h4>
+              <h2 class="subtexte text-center">Jobs Posted</h2>
+          </div>
+          <div class="eachcard">
+            <h4 class="maintext text-center cardhead">3</h4>
+            <h2 class="subtexte text-center">Events Registered</h2>
+        </div>
+    </div>
+  </div>
+
+  <div class="showall">
+      <div class="testmonial">
+        <h3>Testmonial <span class="approved">Approved</span></h3>
+        <p class="testmonialtext">Computer Science and engineering(2020)Computer Science and engineering(2020)Computer Science and engineering(2020)Computer Science and engineering(2020)Computer Science and engineering(2020)Computer Science and engineering(2020)Computer Science and engineering(2020)</p>
+      </div>
+      <div class="subcards">
+        <div class="eachsubcard">
+          <h4 class="text-center">Events Registered</h4>
+          <div class="eachevent"  *ngFor='let each of events'>
+            <h5 class="maintext" style="color: black;">Event name</h5>
+            <h4 class="small">Computer science department</h4>
+            <h4 class="small">Dasari auditorium</h4>
+             
+          </div>
+        </div>
+        <div class="eachsubcard" style="border-left: 1px solid;border-right: 1px solid;">
+          <h4 class="text-center">Job Posted</h4>
+          <!-- <div class="eachevent"  *ngFor='let each of events'>
+            <h5 class="maintext">Event name</h5>
+            <h4 class="small">Computer science department</h4>
+            <h4 class="small">Dasari auditorium</h4>
+             
+          </div> -->
+        </div>
+        <div class="eachsubcard">
+          <h4 class="text-center">Events</h4>
+
+        </div>
+       
+      </div>
+  </div>
+  <button (click)="userprofile=!userprofile" class="back">Back to DashBoard</button>
+</div>
+
 </div>
