--- a/recall/src/app/admin/editevents/editevents.component.css
+++ b/recall/src/app/admin/editevents/editevents.component.css
@@ -15,12 +15,13 @@ float: right;
 margin-right: 10px;
 }
 .eachevent{
-    display: inline-block;
-    width: 31%;
-    font-size: 10px;
-    border: 1px solid;
-    margin: 1%;
-    padding: 10px;
+  display: inline-block;
+  width: 31%;
+  font-size: 10px;
+  border-radius: 5px;
+  margin: 1%;
+  padding: 10px;
+  background: white;
 }
 .eventname{
     font-size: 24px;
@@ -29,6 +30,9 @@ margin-right: 10px;
 .eventdetails{
     font-size: 14px;
 
+}
+.eachevent:hover{
+  background-color: #f1f1f1;
 }
 .data{
 
@@ -42,8 +46,10 @@ button{
     margin: 1%;
     font-size: 15px;
     background: lightgrey;
-    border: 1px solid;
+   border-radius: 5px;
     padding: 4px;
+    border: 1px solid;
+
 
 }
 .form-control{
@@ -83,13 +89,35 @@ button{
     opacity: 1;
   }
   .cevent{
-    width: 23%;
+    width: 15%;
     float: right;
-    font-weight: 600;
-  }
+    color: white;
+    font-size: 20px;
+    border-radius: 5px;
+}
   .createevents{
     background: white;
     margin: 10px;
     border-radius: 5px;
 
+  }
+  .edit{
+    color: #fff;
+    background-color: #27a9e3;
+    border-color: #27a9e3;
+  }
+  .delete{
+    color: #fff;
+    background-color: #da542e;
+    border-color: #da542e;
+  }
+  .edit:hover{
+    color: #fff;
+    background-color: #1a93ca;
+    border-color: #198bbe;
+}
+  .delete:hover{
+    color: #fff;
+    background-color: #c04522;
+    border-color: #b54120;
   }
