--- a/recall/src/app/admin/events/events.component.html
+++ b/recall/src/app/admin/events/events.component.html
@@ -2,21 +2,21 @@
 <div class="eventstop">
     <div class="infobox" style="display: inline-block;">
         
-    <div class="infocard" (click)='upcoming()'>
-        <i class="fa fa-calendar dollar2 icon-rounded" style="background-color: #ffb22b;"></i>
+    <div class="infocard" id='upcoming' (click)="enablecreate=false">
+        <i class="fa fa-calendar dollar2 icon-rounded" style="background-color: #2255a4"></i>
         <div class="count">
             <h5><strong>234</strong></h5>
             <span class="subtext">Upcoming Events</span>
         </div>
     </div>
-    <div class="infocard" id='upcoming'>
-        <i class="fa fa-calendar dollar2 icon-rounded" style="background-color: #ffb22b;"></i>
+    <div class="infocard" id='completed' (click)="enablecreate=false">
+        <i class="fa fa-calendar dollar2 icon-rounded" style="background-color: #68ae00;"></i>
         <div class="count">
             <h5><strong>234</strong></h5>
             <span class="subtext">Completed Events</span>
         </div>
     </div>
-    <div class="infocard"  id='ongoing'>
+    <div class="infocard"  id='ongoing' (click)="enablecreate=false">
         <i class="fa fa-calendar dollar2 icon-rounded" style="background-color: #ffb22b;"></i>
         <div class="count">
             <h5><strong>234</strong></h5>
@@ -24,7 +24,7 @@
         </div>
     </div>
     <div class="infocard" (click)='create()'>
-        <i class="fa fa-plus dollar2 icon-rounded create" style="background-color: #ffb22b;"></i>
+        <i class="fa fa-plus dollar2 icon-rounded create" style="background-color: #ff6e40;"></i>
         <div class="count">
             <h5><strong>Create</strong></h5>
             <span class="subtext">Event</span>
@@ -33,8 +33,8 @@
 </div>
 </div>
 <div class="info">
-    <div *ngIf="showAll">
-        <h5>All Events</h5>
+    <div *ngIf="!enablecreate">
+        <h5 id='text'>{{Eventstext}}</h5>
     <table id='events' class="table table-striped table-bordered table-sm row-border hover" >
         <thead>
           <tr>
@@ -49,40 +49,6 @@
       </table>
     </div>
 
-    <div *ngIf="showOngoing">
-        <h5>Ongoing Events</h5>
-    <table id='ongoingevents' class="table table-striped table-bordered table-sm row-border hover" >
-        <thead>
-          <tr>
-            <th class="tablehead" width="1%" style="width: 0;">#</th>
-            <th class="tablehead"  width="30%">Event Name</th>
-            <th class="tablehead" width="10%">Event Date</th>
-            <th class="tablehead" width="10%">Event Time</th>
-            <th class="tablehead" width="28%">Venue</th>
-            <th class="tablehead" width="10%" style="width: 0;">Added On</th>
-            <th class="tablehead" width="">Actions</th>
-            
-          </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let event of events;index as i">
-                <td class="tabledata">{{i+1}}</td>
-                <td class="tabledata">{{event.name}}</td>
-                <td class="tabledata">{{event.date}}</td>
-                <td class="tabledata">{{event.time}}</td>
-                <td class="tabledata">{{event.venue}}</td>
-                <td class="tabledata">{{event.added}}</td>
-                <td class="tabledata">
-                    <div class="btngroup">
-                    <button class="tablebuttons"><i class="glyphicon glyphicon-pencil"></i></button>
-                    <button class="tablebuttons"><i class="glyphicon glyphicon-trash"></i></button>
-                </div>
-                </td>
-    
-            </tr>
-        </tbody>
-      </table>
-    </div>
 
 <div *ngIf="enablecreate">
     <div>
