--- a/recall/src/app/admin/admin.component.html
+++ b/recall/src/app/admin/admin.component.html
@@ -4,6 +4,7 @@
   <ul class="menu" #menuul>
     <li class="menuElements menuhead">Menu</li>
       <li  class="menuElements buts" routerLink='/Admin/Dashboard'><i class="fa fa-tachometer" aria-hidden="true"></i>Dashboard</li>
+      <li  class="menuElements buts" routerLink='/Admin/Chapters'>   <i class="fa fa-folder-open-o"></i>Chapters</li>
       <li class="menuElements buts" (click)='showEventdropdown=!showEventdropdown'><i class="fa fa-calendar" aria-hidden="true"></i>Events<i class="fa fa-caret-down" style="float: right;"></i>
                 
     </li>
@@ -21,8 +22,7 @@
       <li class="menuElements buts" routerLink='/Admin/HallofFame'><i class="fa fa-handshake-o" aria-hidden="true"></i>Hall Of Fame</li>
       <li class="menuElements buts" routerLink='/Admin/Gallary'><i class="fa fa-picture-o" aria-hidden="true"></i>Gallary</li>
       <li class="menuElements buts" routerLink='/Admin/ContactUs'><i class="fa fa-address-card" aria-hidden="true"></i>Contact Us</li>
-
-      <i class="fas fa-briefcase"></i>
+   
   </ul>
 </div>
 <div class="maindiv" #maindiv>
