--- a/recall/src/app/admin/dashboard/dashboard.component.html
+++ b/recall/src/app/admin/dashboard/dashboard.component.html
@@ -99,6 +99,7 @@
       <div class="extradetails">
         <hr class="hrline">
         <h3 class="small"><b>Email:</b> {{userprofiledata.email}}</h3>
+        <h3 class="small"><b>Phone:</b> {{userprofiledata.phone}}</h3>
         <hr class="hrline">
         <h3 class="small"><b>Institute: </b> {{userprofiledata.institution}}</h3>
         <hr class="hrline">
